--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
          </div>
       </div>
       <ul>
-         <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-         <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-         <li><a href="#"><span class="fab fa-instagram"></span></a></li>
-         <li><a href="#"><span class="fab fa-linkedin"></span></a></li>
-         <li><a href="#"><span class="fab fa-youtube"></span></a></li>
+         <li><a href="https://www.facebook.com/YADAVAashishKr"><span class="fab fa-facebook-f"></span></a></li>
+         <li><a href="https://twitter.com/YADAVAashishKr"><span class="fab fa-twitter"></span></a></li>
+         <li><a href="https://www.instagram.com/yadav.aashish.kumar/"><span class="fab fa-instagram"></span></a></li>
+         <li><a href="https://www.linkedin.com/in/aashish-kumar-yadav"><span class="fab fa-linkedin"></span></a></li>
+         <li><a href="https://youtube.com/channel/UCPw-m9fCsia_SIHLjLCvQig"><span class="fab fa-youtube"></span></a></li>
       </ul>
    </div>
 </body>
