--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By Aryan Singh (singharyans754) -->
+<!-- Digital Progfile Card -->
 <head>
    <meta charset="utf-8">
    <title>Aashish Kumar Yadav</title>
@@ -16,7 +16,7 @@
             <h2 style="color:red;">
                Aashish Kumar Yadav
             </h2>
-            <span>CSE Student</span>
+            <span>Student of Computer Science</span>
          </div>
       </div>
       <ul>
@@ -24,8 +24,9 @@
          <li><a href="https://twitter.com/YADAVAashishKr"><span class="fab fa-twitter"></span></a></li>
          <li><a href="https://www.instagram.com/yadav.aashish.kumar/"><span class="fab fa-instagram"></span></a></li>
          <li><a href="https://www.linkedin.com/in/aashish-kumar-yadav"><span class="fab fa-linkedin"></span></a></li>
-         <li><a href="https://youtube.com/channel/UCPw-m9fCsia_SIHLjLCvQig"><span class="fab fa-youtube"></span></a></li>
+        <!-- <li><a href="https://youtube.com/channel/UCPw-m9fCsia_SIHLjLCvQig"><span class="fab fa-youtube"></span></a></li> -->
       </ul>
    </div>
 </body>
 </html>
+<!-- visit My friend Github Progfile singharyans754 -->
