--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Digital Progfile Card -->
+<!-- Digital Profile Card -->
 <head>
    <meta charset="utf-8">
    <title>Aashish Kumar Yadav</title>
@@ -29,4 +29,4 @@
    </div>
 </body>
 </html>
-<!-- visit My friend Github Progfile singharyans754 -->
+<!-- Visit My friend Github Profile singharyans754 -->
