--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2 style="color:red;">
                Aashish Kumar Yadav
             </h2>
-            <span>Student of Computer Science</span>
+            <span>Student of Computer Science and Engineering</span>
          </div>
       </div>
       <ul>
