--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2 style="color:red;">
                Aashish Kumar Yadav
             </h2>
-            <span>Student of Computer Science</span>
+            <span>Student of CDAC</span>
          </div>
       </div>
       <ul>
@@ -29,4 +29,3 @@
    </div>
 </body>
 </html>
-<!-- Visit My friend Github Profile singharyans754 -->
