--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="container">
       <div class="image">
-         <img src="https://avatars.githubusercontent.com/u/84706612?v=4">
+         <img src="MYPIC.jpg">
       </div>
       <div class="content">
          <div class="info">
